Use Java instead of Guava